--- a/jd_flutter/pubspec.yaml
+++ b/jd_flutter/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   dio: ^3.0.10
   flutter_swiper: ^1.1.6
   http: ^0.12.2
+  cached_network_image: ^2.4.1
+  shared_preferences: ^0.5.12
+  flutter_webview_plugin: ^0.3.11
+  flutter_html: ^1.1.1
+  image: ^2.1.19
 
 dev_dependencies:
   flutter_test:
